--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
-    "tailwind-config-viewer": "^1.6.2"
+    "axios": "^0.27.2",
+    "tailwind-config": "^0.1.2",
+    "tailwind-config-viewer": "^1.6.2",
+    "vue-inline-svg": "^3.1.0"
   }
 }
