--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^10.2.1",
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
