--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "serve": "concurrently --kill-others \"npm run tailwind\" \"nuxi dev\"",
     "build": "nuxi build",
@@ -16,6 +17,7 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
+    "@igortrindade/vue-number-format": "^1.3.0",
     "axios": "^0.27.2",
     "tailwind-config": "^0.1.2",
     "tailwind-config-viewer": "^1.6.2",
