--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "tailwind-config": "^0.1.2",
     "tailwind-config-viewer": "^1.6.2",
-    "vue-inline-svg": "^3.1.0"
+    "vue-inline-svg": "^3.1.0",
+    "vue-the-mask": "^0.11.1"
   }
 }
