--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@igortrindade/vue-number-format": "^1.3.0",
     "axios": "^0.27.2",
+    "mitt": "^3.0.0",
     "tailwind-config": "^0.1.2",
     "tailwind-config-viewer": "^1.6.2",
     "tiny-emitter": "^2.1.0",
