--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@igortrindade/vue-number-format": "^1.3.0",
+    "@pinia/nuxt": "^0.1.9",
     "axios": "^0.27.2",
     "mitt": "^3.0.0",
+    "pinia": "^2.0.14",
     "tailwind-config": "^0.1.2",
     "tailwind-config-viewer": "^1.6.2",
     "vue-inline-svg": "^3.1.0",
