--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "mitt": "^3.0.0",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.6.1",
     "tailwind-config": "^0.1.2",
     "tailwind-config-viewer": "^1.6.2",
     "vue-inline-svg": "^3.1.0",
