--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@igortrindade/vue-number-format": "^1.3.0",
     "@pinia/nuxt": "^0.1.9",
     "axios": "^0.27.2",
+    "dompurify": "^2.3.8",
     "mitt": "^3.0.0",
+    "pell": "^1.0.6",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^1.6.1",
     "tailwind-config": "^0.1.2",
