--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.0.4",
     "concurrently": "^7.2.0",
-    "nuxt": "3.0.0-rc.1",
+    "nuxt": "3.0.0-rc.4",
     "sass": "^1.51.0",
     "sass-loader": "^10.2.1",
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
+    "@igortrindade/lazyfy": "^1.1.4",
     "@igortrindade/vue-number-format": "^1.3.0",
     "@pinia/nuxt": "^0.1.9",
     "axios": "^0.27.2",
