--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "nuxi build",
     "generate": "nuxi generate",
     "start": "node .output/server/index.mjs",
-    "tailwind": "tailwind-config-viewer --open --port 3001"
+    "tailwind": "tailwind-config-viewer --open --port 3001",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.0.4",
@@ -16,6 +17,7 @@
     "nuxt": "3.0.0-rc.4",
     "sass": "^1.51.0",
     "sass-loader": "^10.2.1",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
