--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "type": "commonjs",
+  "version": "0.0.6",
   "scripts": {
     "serve": "concurrently --kill-others --success first \"npm:dev:*\"",
     "dev:tailwind": "npm run tailwind",
