--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwind-config": "^0.1.2",
     "tailwind-config-viewer": "^1.6.2",
     "vue-inline-svg": "^3.1.0",
+    "vue-router": "^4.1.2",
     "vue-the-mask": "^0.11.1"
   }
 }
