--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@igortrindade/vue-number-format": "^1.3.0",
     "@pinia/nuxt": "^0.1.9",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "dompurify": "^2.3.8",
     "mitt": "^3.0.0",
     "pell": "^1.0.6",
