--- a/.github/workflows/create-app-version.yml
+++ b/.github/workflows/create-app-version.yml
@@ -16,7 +16,8 @@ jobs:
         node-version: '16.14.2'
     - run: git config --global user.email "igortrindademe@gmail.com"
     - run: git config --global user.name "Igor Trindade"
-    - run: git fetch origin ${{ github.ref_name }}
+    - run: git fetch --all
+    - run: git log origin/main
     - run: pwd && npm ci
     - run: npm run release
     - run: git push --follow-tags origin ${{ github.ref_name }}
