--- a/.github/workflows/create-app-version.yml
+++ b/.github/workflows/create-app-version.yml
@@ -12,12 +12,9 @@ jobs:
     
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
-      with:
-        node-version: '16.14.2'
-    - run: git config --global user.email "igortrindademe@gmail.com"
-    - run: git config --global user.name "Igor Trindade"
-    - run: git fetch --all
-    - run: git log origin/main
-    - run: pwd && npm ci
-    - run: npm run release
-    - run: git push --follow-tags origin ${{ github.ref_name }}
+    - name: Configure committer
+      run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
+    - name: Bump version
+      uses: qzb/standard-version@v1
