--- a/.github/workflows/create-app-version.yml
+++ b/.github/workflows/create-app-version.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
     - name: Configure committer
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
     - name: Bump version
-      uses: qzb/standard-version@v1
+      uses: qzb/standard-version-action@v1.0.5
