--- a/.github/workflows/create-app-version.yml
+++ b/.github/workflows/create-app-version.yml
@@ -10,12 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-    - name: Configure committer
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "<>"
-    - name: Bump version
-      uses: qzb/standard-version-action@v1.0.5
-    - run: git push --follow-tags origin main
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16.14.2'
+    - run: git config --global user.email "igortrindademe@gmail.com"
+    - run: git config --global user.name "Igor Trindade"
+    - run: git fetch --all
+    - run: pwd && npm ci
+    - run: npm run release
+    - run: git push --follow-tags origin ${{ github.ref_name }}
