--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "socket.io-client": "^4.5.1",
     "tailwind-config": "^0.1.2",
     "tailwind-config-viewer": "^1.6.2",
+    "vue-gtag": "^2.0.1",
     "vue-inline-svg": "^3.1.0",
     "vue-the-mask": "^0.11.1"
   }
