feat: Instalação LogRocket para gravação de sessão de usuários

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "dompurify": "^2.3.8",
+    "logrocket": "^3.0.1",
     "mitt": "^3.0.0",
     "pell": "^1.0.6",
     "pinia": "^2.0.14",
